5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1674_1100.log
== TEST (2019-04-25 11:36:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("digite valor da celula:"))

print("Entrada:", a)
if ((a >100) or (a<0)):
	print("Animal:", "Invalido")
elif (a==2):
	print("Animal:", "Tartaruga")
elif (a==5):
	print("Animal:", "Garça")
elif (a==10):
	print("Animal:", "Arara")
elif (a==20):
	print("Animal:", "Mico-leao-dourado")
elif(a==50):
	print("Animal:", "Onca-pintada")
elif(a==100)
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")

-- ERROR:
File "XXXX", line 19
    elif(a==100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("digite valor da celula:"))

print("Entrada:", a)
if ((a >100) or (a<0)):
	print("Animal:", "Invalido")
elif (a==2):
	print("Animal:", "Tartaruga")
elif (a==5):
	print("Animal:", "Garça")
elif (a==10):
	print("Animal:", "Arara")
elif (a==20):
	print("Animal:", "Mico-leao-dourado")
elif(a==50):
	print("Animal:", "Onca-pintada")
elif(a==100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("digite valor da celula:"))

print("Entrada:", a)
if ((a >100) or (a<0)):
	print("Animal:", "Invalido")
elif (a==2):
	print("Animal:", "Tartaruga")
elif (a==5):
	print("Animal:", "Garça")
elif (a==10):
	print("Animal:", "Arara")
elif (a==20):
	print("Animal:", "Mico-leao-dourado")
elif(a==50):
	print("Animal:", "Onca-pintada")
elif(a==100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("digite valor da celula:"))

print("Entrada:", a)
if ((a >100) or (a<0)):
	print("Animal:", "Invalido")
elif (a==2):
	print("Animal:", "Tartaruga")
elif (a==5):
	print("Animal:", "Garça")
elif (a==10):
	print("Animal:", "Arara")
elif (a==20):
	print("Animal:", "Mico-leao-dourado")
elif(a==50):
	print("Animal:", "Onca-pintada")
elif(a==100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("digite valor da celula:"))

print("Entrada:", a)
if ((a >100) or (a<0)):
	print("Animal:", "Invalido")
elif (a==2):
	print("Animal:", "Tartaruga")
elif (a==5):
	print("Animal:", "Garça")
elif (a==10):
	print("Animal:", "Arara")
elif (a==20):
	print("Animal:", "Mico-leao-dourado")
elif(a==50):
	print("Animal:", "Onca-pintada")
elif(a==100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:37:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("digite valor da celula:"))

print("Entrada:", a)
if ((a >100) or (a<0)):
	print("Animal:", "Invalido")
elif (a==2):
	print("Animal:", "Tartaruga")
elif (a==5):
	print("Animal:", "Garça")
elif (a==10):
	print("Animal:", "Arara")
elif (a==20):
	print("Animal:", "Mico-leao-dourado")
elif(a==50):
	print("Animal:", "Onca-pintada")
elif(a==100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")

-- EXECUTION TIME:
0.177929
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
